src/components/body/IssueList.css
.article-container{
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: 20px;
    border-radius: 8px;
    padding: 10px;
    overflow: auto;
    display: inline-block;
    flex-direction: column;
    z-index: 1000;
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll; 
}

.articles{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: rgba(26, 27, 28, 0.364);
    color: white;
    margin: 20px;
    border-radius: 8px;
    padding: 10px;
    width: 100%;
    text-decoration: none;
}

.background-img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    opacity: 1;
    z-index: -1;
    position: absolute;
    top:0;
    left:0;
}

.list-container{
    flex-direction: column;
    justify-content: center;
    align-items: center;
    justify-content: center;
    margin: 20px;
    border-radius: 8px;
    padding: 10px;
    display: inline-block;
    flex-direction: column;
    z-index: 1000;
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll; 
}

.list-container:hover{
    -ms-overflow-style: auto; /* for Internet Explorer, Edge */
    scrollbar-width: thin; /* for Firefox */
    overflow-x: hidden;
}


.home-link{
    position: relative;
    margin: 10px;
    color: white;
    text-decoration: none;
    font-size: 20px;
    font-weight: 600;
    z-index: 9999;
    align-items: center;
    justify-content: center;
    font-family: Arial, Helvetica,'Roboto', sans-serif;
    padding: 10px;
    border-radius: 8px;
    background-color: rgba(130, 194, 255, 0.497);
}

